fix pop overflow

--- a/style.css
+++ b/style.css
@@ -249,159 +249,156 @@
     top: 139px;
   }
 
-/*-------------------------------*/
-.contPopUp {
-  top: 0;
-  left: 0;
-  z-index: 10;
-  display: none;
-  position: fixed;
-  padding: 5% 10% 5% 10%;
-  color: #172b4d;
-  width: 100vw;
-  height: 100vh;
-  box-sizing: border-box;
-  backdrop-filter: blur(5px);
-}
+  /* ------------------------------- */
+  .contPopUp {
+    top: 0;
+    left: 0;
+    z-index: 10;
+    display: none;
+    position: fixed;
+    padding: 5% 10% 5% 10%;
+    color: #172b4d;
+    width: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+    backdrop-filter: blur(5px);
+  }
 
+  .popUp-main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 
+  .contentPopUp {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 100%;
+    height: 95vh;
+    padding: 3% 2% 2% 2%;
+    box-sizing: border-box;
+  }
 
-.popUp-main {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
+  .popUp-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    font-size: 4vh;
+  }
 
-.contentPopUp {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  width: 100%;
-  height: 95vh;
-  padding: 3% 2% 2% 2%;
-  box-sizing: border-box;
-}
+  .popUph2-m {
+    margin: 0;
+    font-family: 'Crete Round', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 4.5vh;
+  }
 
-.popUp-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  font-size: 4vh;
-}
+  .popUpImg {
+    width: 100%;
+    height: 29vh;
+    object-fit: cover;
+  }
 
-.popUph2-m {
-  margin: 0;
-  font-family: 'Crete Round', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 6vh;
-}
+  .exitButton {
+    left: 150px;
+    background-color: transparent;
+    background-image: url(images/exit.png);
+    width: 24px;
+    height: 24px;
+    border: none;
+  }
 
-.popUpImg {
-  width: 100%;
-  height: 29vh;
-  object-fit: cover;
-}
+  .popUp-stack {
+    width: 100%;
+    padding: 0%;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    height: 9vmin;
+  }
 
-.exitButton {
-  left: 150px;
-  background-color: transparent;
-  background-image: url(images/exit.png);
-  width: 24px;
-  height: 24px;
-  border: none;
-}
+  .popUp-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-.popUp-stack {
-  padding: 0%;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  text-align: center;
-  margin-top: 1%;
-  margin-bottom: 1%;
-  height: 9vmin;
-}
+  .popUp-paragraph {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+  }
 
-.popUp-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+  .popUp-text {
+    width: 100%;
+    height: auto;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.2vh;
+  }
 
-.popUp-paragraph {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
-}
+  .listPopUp {
+    width: 40%;
+  }
 
-.popUp-text {
-  width: 100%;
-  height: auto;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 2.2vh;
-}
+  .popUp-btns {
+    width: 100%;
+    height: 6vh;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+  }
 
-.listPopUp {
-  width: 40%;
-}
+  .button-Live {
+    color: white;
+    background-color: #ff6b00;
+    padding: 5px 12px;
+    width: 100%;
+    height: 6vh;
+    border: 1px solid #ff6b00;
+    text-align: start;
+    background-image: url('images/icon-arrow.png');
+    background-repeat: no-repeat;
+    background-position: 85% 50%;
+    font-size: 3vmin;
+  }
 
-.popUp-btns {
-  width: 100%;
-  height: 6vh;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  position: relative;
-}
+  .button-Source {
+    color: white;
+    background-color: #ff6b00;
+    padding: 1% 6%;
+    width: 100%;
+    height: 6vh;
+    border: 1px solid #ff6b00;
+    text-align: start;
+    background-image: url('images/GitHubcat-2.png');
+    background-repeat: no-repeat;
+    background-position: 85% 50%;
+    font-size: 3vmin;
+  }
 
-.button-Live {
-  font-size: 2vmin;
-  color: white;
-  background-color: #ff6b00;
-  padding: 5px 12px;
-  width: 100%;
-  height: 6vh;
-  border: 1px solid #ff6b00;
-  text-align: start;
-  background-image: url('images/icon-arrow.png');
-  background-repeat: no-repeat;
-  background-position: 85% 50%;
-  font-size: 3vmin;
-}
+  .img-btn {
+    z-index: 200;
+    width: 30px;
+    height: auto;
+    position: relative;
+    right: 30px;
+  }
 
-.button-Source {
-  font-size: 2vmin;
-  color: white;
-  background-color: #ff6b00;
-  padding: 1% 6%;
-  width: 100%;
-  height: 6vh;
-  border: 1px solid #ff6b00;
-  text-align: start;
-  background-image: url('images/GitHubcat-2.png');
-  background-repeat: no-repeat;
-  background-position: 85% 50%;
-  font-size: 3vmin;
-}
-
-.img-btn {
-  z-index: 200;
-  width: 30px;
-  height: auto;
-  position: relative;
-  right: 30px;
-}
-/*-------------------------------*/
   .section-2 {
     display: flex;
     flex-direction: column;
@@ -495,7 +492,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-size: 15px;
+    font-size: 2.4vh;
     font-family: "Inter", sans-serif;
   }
 
@@ -511,7 +508,7 @@
 
   .h4-2 {
     box-sizing: border-box;
-    padding: 10px 5px;
+    padding: 10px 8px;
     width: 67px;
     height: 40px;
     border: 1px solid #8993a4;
@@ -527,7 +524,7 @@
 
   .h4-4 {
     box-sizing: border-box;
-    padding: 10px 5px;
+    padding: 10px 8px;
     width: 61px;
     height: 40px;
     border: 1px solid #8993a4;
@@ -967,7 +964,7 @@
   }
 
   .nav-desktop {
-    width: 100%;
+    width: 101vw;
     height: 72px;
     z-index: 10;
     position: fixed;
@@ -1199,14 +1196,11 @@
   /* -- add style to my second paragraph -- */
 
   .para-2 {
-    grid-column: 2/3;
-    grid-row: 2/3;
     margin-top: 1%;
     width: 80%;
     height: 35%;
     font-family: 'Inter', sans-serif;
-    font-size: 166%;
-    line-height: 28px;
+    font-size: 2vh;
     text-align: left;
   }
 
